[package]
name = "rusty_jam"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", rev = "62e4e59a", features=["dynamic"]}
rand = "0.8"
pathfinding = "2.2"
itertools = "0.10"

[profile.dev.package."*"]
opt-level = 3
